--- a/BasicCRUD/BasicCRUD.Dao/BasicCRUD.Dao.csproj
+++ b/BasicCRUD/BasicCRUD.Dao/BasicCRUD.Dao.csproj
@@ -44,5 +44,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserDao.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BasicCRUD.Model\BasicCRUD.Model.csproj">
+      <Project>{51752928-13d9-470f-8c41-8378b2814bef}</Project>
+      <Name>BasicCRUD.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
